# DukaScraper

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  amharic_news.json  docker-compose.yml  pyproject.toml  raw_crawl.json  requirements.txt  run.ps1  test_scraper_pipeline.py  thekey
.github/workflows/: ci.yml
app/: main.py
app/airflow/: Dockerfile
app/airflow/dags/: crawl_targets.json  dynamic_crawl_scheduler_dag.py
app/api/routes/: api.py  crawl.py  jobs.py  storage.py
app/common/config/: settings.py
app/common/constants/: worker_types.py
app/common/logger/: logger.py
app/crawler/: process_manager.py  worker_manager.py
app/pipeline/: schemas.py
app/pipeline/consumer/: kafka_consumer.py
app/pipeline/producer/: kafka_producer.py
app/pipeline/topics/: topics.py
app/scheduler/: scheduler.py
app/storage/elasticsearch/: client.py
app/storage/minio/: client.py
app/storage/postgres/: client.py
app/storage/redis/: client.py
backend/: main.py  requirements.txt
docs/: Duka Scraper Project Plan.docx  ~$ka Scraper Project Plan.docx
minio-init/: Dockerfile  init.sh
monitoring/: prometheus.yml
scripts/setup/: setup.ps1  setup.sh
tests/unit/: test_pipeline_schemas_import.py  test_worker_routing.py
ui/: package-lock.json  package.json
ui/src/: App.jsx
workers/: Dockerfile  requirements.txt
workers/dark-worker/: main.py
workers/deep-worker/: main.py
workers/parser-worker/: main.py
workers/surface-worker/: main.py  requirements.txt
