[project]
name = "duka-scraper"
version = "0.1.0"
description = "Amharic-focused web scraping and content extraction platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "elasticsearch>=8.12.0",
    "minio>=7.2.0",
    "aiokafka>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "colorama>=0.4.6",
    "selenium>=4.34.0",
    "scrapy>=2.11.0",
    "stem>=1.8.0",
    "playwright>=1.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
